--- a/src/app/test/filter/filter.component.html
+++ b/src/app/test/filter/filter.component.html
@@ -1,11 +1,13 @@
-<div class="m-2 border w-fit border-slate-300">
-  <input
-    class="border border-slate-200"
-    [(ngModel)]="query"
-    (input)="sendQuery(query)"
-  />
-  <div class="absolute overflow-y-auto bg-slate-100 max-h-48">
-    <div *ngFor="let result of results" (click)="select(result)">
+<div
+  *ngIf="results.length > 0"
+  class="absolute z-20 w-full mt-1 bg-white border border-gray-300 rounded-md shadow-lg"
+>
+  <div class="overflow-y-auto max-h-48">
+    <div
+      *ngFor="let result of results"
+      (click)="select(result)"
+      class="px-4 py-2 cursor-pointer hover:bg-gray-100"
+    >
       {{ result }}
     </div>
   </div>
