--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -3,7 +3,7 @@
     <div class="w-1/2">
       <button
         routerLink="/draft/{{ leagueId }}"
-        class="px-3 py-2 text-sm text-white rounded-md bg-slate-600"
+        class="px-3 py-2 text-sm text-white rounded-md bg-slate-500 hover:bg-slate-600 focus:outline-none focus:bg-slate-600"
       >
         Back
       </button>
@@ -11,7 +11,7 @@
     <div class="flex justify-end w-1/2">
       <div class="flex justify-end w-1/2">
         <button
-          class="px-3 py-2 text-sm text-white rounded-md bg-slate-600"
+          class="px-3 py-2 text-sm text-white rounded-md bg-slate-500 hover:bg-slate-600 focus:outline-none focus:bg-slate-600"
           (click)="share()"
         >
           Share
@@ -30,7 +30,7 @@
           http://localhost:4200/matchup/65cc0e63130aafe30691da54
         </div>
         <button
-          class="px-3 py-2 ml-2 text-sm text-white rounded-md bg-slate-600"
+          class="px-3 py-2 ml-2 text-sm text-white rounded-md bg-slate-500 hover:bg-slate-600 focus:outline-none focus:bg-slate-600"
           (click)="copyToClipboard()"
         >
           {{ copyText }}
@@ -38,7 +38,7 @@
       </div>
       <div class="flex-grow"></div>
       <button
-        class="px-4 py-2 mt-4 text-white rounded-md bg-slate-600"
+        class="px-4 py-2 mt-4 text-white rounded-md bg-slate-500 hover:bg-slate-600 focus:outline-none focus:bg-slate-600"
         (click)="shared = false"
       >
         Close
