team names added to summery

--- a/src/app/matchup-overview/matchup/overview/overview.component.html
+++ b/src/app/matchup-overview/matchup/overview/overview.component.html
@@ -2,7 +2,7 @@
   <div class="flex flex-row w-256 md:w-128">
     <div class="w-1/2 m-1">
       <div class="text-xl text-center bg-slate-400 text-medium rounded-t-3xl">
-        My Team
+        {{ aTeam.teamName }}
       </div>
       <table
         id="myOverview"
@@ -41,7 +41,7 @@
     </div>
     <div class="w-1/2 m-1">
       <div class="text-xl text-center bg-slate-400 text-medium rounded-t-3xl">
-        Opponent Team
+        {{ bTeam.teamName }}
       </div>
       <table
         id="oppOverview"
