--- a/src/app/matchup-overview/matchup/movechart/movechart.component.html
+++ b/src/app/matchup-overview/matchup/movechart/movechart.component.html
@@ -1,35 +1,39 @@
-<div class="">
-  <button
-    (click)="swapTeams()"
-    class="px-3 text-sm border-t-4 border-b border-x-4 border-slate-400 rounded-t-xl"
-    [ngClass]="teamColor(true)"
-  >
-    ⇄
-  </button>
-  <div
-    class="overflow-auto border-4 max-h-128 w-128 border-slate-400 bg-slate-400"
-  >
-    <div *ngFor="let category of this.teams[selectedTeam]">
+<div class="flex w-full px-1 bg-slate-400 rounded-t-xl">
+  <div class="flex w-full pb-1 border-b border-slate-300">
+    <h1 class="w-full text-xl font-bold text-center">Learned Moves</h1>
+    <button
+      (click)="swapTeams()"
+      class="px-3 mx-1 mt-2 ml-auto text-sm rounded-md"
+      [ngClass]="teamColor(true)"
+    >
+      ⇄
+    </button>
+  </div>
+</div>
+<div
+  class="overflow-auto border-4 max-h-128 w-128 border-slate-400 bg-slate-400"
+>
+  <div *ngFor="let category of this.teams[selectedTeam]">
+    <div
+      class="sticky top-0 left-0 text-lg font-bold text-center border-b-2 bg-slate-300 border-slate-400"
+    >
+      {{ category.catName }}
+    </div>
+    <div class="">
       <div
-        class="sticky top-0 left-0 text-lg font-bold text-center border-b-2 bg-slate-300 border-slate-400"
+        class="flex border-b-2 border-slate-400 bg-slate-200"
+        *ngFor="let move of category.moves"
       >
-        {{ category.catName }}
-      </div>
-      <div class="">
-        <div
-          class="flex border-b-2 border-slate-400 bg-slate-200"
-          *ngFor="let move of category.moves"
-        >
-          <div class="w-1/3 border-r border-slate-400">{{ move.moveName }}</div>
-          <div class="flex flex-row flex-wrap w-2/3">
-            <sprite
-              class="h-8"
-              *ngFor="let pokemon of move.pokemon"
-              [pokemon]="{ pid: pokemon }"
-            ></sprite>
-          </div>
+        <div class="w-1/3 border-r border-slate-400">{{ move.moveName }}</div>
+        <div class="flex flex-row flex-wrap w-2/3">
+          <sprite
+            class="h-8"
+            *ngFor="let pokemon of move.pokemon"
+            [pokemon]="{ pid: pokemon }"
+          ></sprite>
         </div>
       </div>
     </div>
   </div>
 </div>
+<div class="w-full h-3 rounded-b-full bg-slate-400"></div>
