--- a/src/app/matchup-overview/matchup/speedchart/speedchart.component.html
+++ b/src/app/matchup-overview/matchup/speedchart/speedchart.component.html
@@ -1,3 +1,13 @@
+<div class="flex w-full px-1 bg-slate-400 rounded-t-xl">
+  <div class="flex w-full pb-1 border-b border-slate-300">
+    <h1 class="w-full text-xl font-bold text-center">Speed Table</h1>
+    <img
+      class="px-1 mx-1 mt-2 ml-auto text-sm rounded-md w-7 bg-slate-300"
+      src="../../../assets/icons/filter.svg"
+      title="Filter"
+    />
+  </div>
+</div>
 <div class="border-4 border-slate-400 bg-slate-400">
   <div class="bg-slate-200">
     <div class="flex border-b-2 border-slate-400">
@@ -20,3 +30,4 @@
     </div>
   </div>
 </div>
+<div class="w-full h-3 rounded-b-full bg-slate-400"></div>
