--- a/src/app/matchup-overview/matchup/summery/summery.component.html
+++ b/src/app/matchup-overview/matchup/summery/summery.component.html
@@ -1,11 +1,17 @@
-<div class="">
-  <button
-    (click)="swapTeams()"
-    class="px-3 text-sm border-t-4 border-b border-x-4 border-slate-400 rounded-t-xl"
-    [ngClass]="teamColor(true)"
-  >
-    ⇄
-  </button>
+<div>
+  <div class="flex w-full px-1 bg-slate-400 rounded-t-xl">
+    <div class="flex w-full pb-1 border-b border-slate-300">
+      <h1 class="w-full text-xl font-bold text-center">Team Overview</h1>
+      <button
+        (click)="swapTeams()"
+        class="px-3 mx-1 mt-2 ml-auto text-sm rounded-md"
+        [ngClass]="teamColor(true)"
+      >
+        ⇄
+      </button>
+    </div>
+  </div>
+
   <table
     id="myOverview"
     class="w-full border-4 rounded-md table-auto border-slate-400"
@@ -234,4 +240,5 @@
       </td>
     </tr>
   </table>
+  <div class="w-full h-3 rounded-b-full bg-slate-400"></div>
 </div>
