change buttons to have shadow and hover

--- a/src/app/matchup-overview/matchup/movechart/movechart.component.html
+++ b/src/app/matchup-overview/matchup/movechart/movechart.component.html
@@ -3,8 +3,8 @@
     <h1 class="w-full text-xl font-bold text-center">Learned Moves</h1>
     <button
       (click)="swapTeams()"
-      class="px-3 mx-1 mt-2 ml-auto text-sm rounded-md"
-      [ngClass]="teamColor(true)"
+      class="px-3 mx-1 mt-2 ml-auto text-sm rounded-md shadow-md"
+      [ngClass]="clickColor(true)"
     >
       ⇄
     </button>
