add cursor to sorts

--- a/src/app/matchup-overview/matchup/summery/summery.component.html
+++ b/src/app/matchup-overview/matchup/summery/summery.component.html
@@ -20,38 +20,59 @@
     <tr class="bg-slate-400">
       <th></th>
       <th class="w-12"></th>
-      <th (click)="sortByName()" class="w-32 hover:text-slate-200">
+      <th
+        (click)="sortByName()"
+        class="w-32 cursor-pointer hover:text-slate-200"
+      >
         <div *ngIf="sortBy != 'name'">Name</div>
         <div *ngIf="sortBy == 'name' && !reversed">Name ↥</div>
         <div *ngIf="sortBy == 'name' && reversed">Name ↧</div>
       </th>
       <th class="w-24">Abilities</th>
-      <th (click)="sortByStat('hp')" class="w-12 hover:text-slate-200">
+      <th
+        (click)="sortByStat('hp')"
+        class="w-12 cursor-pointer hover:text-slate-200"
+      >
         <div *ngIf="sortBy != 'hp'">HP</div>
         <div *ngIf="sortBy == 'hp' && !reversed">HP ↥</div>
         <div *ngIf="sortBy == 'hp' && reversed">HP ↧</div>
       </th>
-      <th (click)="sortByStat('atk')" class="w-12 hover:text-slate-200">
+      <th
+        (click)="sortByStat('atk')"
+        class="w-12 cursor-pointer hover:text-slate-200"
+      >
         <div *ngIf="sortBy != 'atk'">ATK</div>
         <div *ngIf="sortBy == 'atk' && !reversed">ATK ↥</div>
         <div *ngIf="sortBy == 'atk' && reversed">ATK ↧</div>
       </th>
-      <th (click)="sortByStat('def')" class="w-12 hover:text-slate-200">
+      <th
+        (click)="sortByStat('def')"
+        class="w-12 cursor-pointer hover:text-slate-200"
+      >
         <div *ngIf="sortBy != 'def'">DEF</div>
         <div *ngIf="sortBy == 'def' && !reversed">DEF ↥</div>
         <div *ngIf="sortBy == 'def' && reversed">DEF ↧</div>
       </th>
-      <th (click)="sortByStat('spa')" class="w-12 hover:text-slate-200">
+      <th
+        (click)="sortByStat('spa')"
+        class="w-12 cursor-pointer hover:text-slate-200"
+      >
         <div *ngIf="sortBy != 'spa'">SPA</div>
         <div *ngIf="sortBy == 'spa' && !reversed">SPA ↥</div>
         <div *ngIf="sortBy == 'spa' && reversed">SPA ↧</div>
       </th>
-      <th (click)="sortByStat('spd')" class="w-12 hover:text-slate-200">
+      <th
+        (click)="sortByStat('spd')"
+        class="w-12 cursor-pointer hover:text-slate-200"
+      >
         <div *ngIf="sortBy != 'spd'">SPD</div>
         <div *ngIf="sortBy == 'spd' && !reversed">SPD ↥</div>
         <div *ngIf="sortBy == 'spd' && reversed">SPD ↧</div>
       </th>
-      <th (click)="sortByStat('spe')" class="w-12 hover:text-slate-200">
+      <th
+        (click)="sortByStat('spe')"
+        class="w-12 cursor-pointer hover:text-slate-200"
+      >
         <div *ngIf="sortBy != 'spe'">SPE</div>
         <div *ngIf="sortBy == 'spe' && !reversed">SPE ↥</div>
         <div *ngIf="sortBy == 'spe' && reversed">SPE ↧</div>
