--- a/src/app/matchup-overview/matchup/matchup.component.html
+++ b/src/app/matchup-overview/matchup/matchup.component.html
@@ -4,5 +4,9 @@
   <typechart class="z-10 m-2" [teams]="typeChart"></typechart>
   <speedchart class="z-10 m-2" [speedchart]="speedChart"></speedchart>
   <movechart class="z-10 m-2" [teams]="moveChart"></movechart>
-  <coveragechart class="z-10 m-2" [teams]="coverageChart"></coveragechart>
+  <coveragechart
+    class="z-10 m-2"
+    [coverage]="coverageChart"
+    [typecharts]="typeChart"
+  ></coveragechart>
 </div>
