typechart local summery

--- a/src/app/matchup-overview/matchup/matchup.component.html
+++ b/src/app/matchup-overview/matchup/matchup.component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-wrap p-2 text-xs">
   <overview class="z-10 m-2" [teams]="summery"></overview>
   <summery class="z-10 m-2" [teams]="summery"></summery>
-  <typechart class="z-10 m-2" [teams]="typeChart"></typechart>
+  <typechart class="z-10 m-2" [typecharts]="typeChart"></typechart>
   <speedchart class="z-10 m-2" [speedchart]="speedChart"></speedchart>
   <movechart class="z-10 m-2" [teams]="moveChart"></movechart>
   <coveragechart
